--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -527,6 +527,10 @@ input[type="submit"] {
 	text-transform: uppercase;
 }
 
+button .fa {
+  margin-right: 5px;
+}
+
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
@@ -2489,6 +2493,12 @@ p > video {
 .actions .fa {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+div.connect-twitter {
+  display: inline-block;
+  padding-top: 35px;
+  margin-bottom: -20px;
 }
 
 /**
